--- a/style.css
+++ b/style.css
@@ -1,17 +1,89 @@
-h1 {
-    color: rgb(128, 0, 96);
-    margin-left: 20px;
-}
-
-p {
-    color: rgb(0, 0, 0);
-}
-
-.other {
-    color: blueviolet;
-
-}
+/* style.css */
 
 body {
-    background-color: bisque;
+    font-family: Arial, sans-serif;
 }
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.profile-name {
+    font-size: 2rem;
+    font-weight: bold;
+    color: #2C3E50;
+}
+
+.home-icon {
+    width: 30px;
+    height: 30px;
+}
+
+.navbar {
+    list-style-type: none;
+    display: flex;
+    gap: 20px;
+    padding: 0;
+}
+
+.navbar li {
+    display: inline;
+}
+
+.navbar a {
+    text-decoration: none;
+    color: #3498DB;
+    font-size: 1.1rem;
+}
+
+.navbar a:hover {
+    font-weight: bold;
+    text-decoration: underline;
+}
+
+section {
+    margin: 20px 0;
+}
+
+.profile-img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
+.skills-list {
+    display: flex;
+    gap: 20px;
+}
+
+.skill img {
+    width: 50px;
+    height: 50px;
+}
+
+.projects-list {
+    list-style-type: none;
+}
+
+.projects-list li {
+    margin: 15px 0;
+}
+
+.recommendation {
+    margin: 10px 0;
+}
+
+button {
+    padding: 10px 20px;
+    background-color: #3498DB;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #2980B9;
+}
+
