--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 body {
     font-family: Arial, sans-serif;
+    background-color: aliceblue;
 }
 
 header {
@@ -22,6 +23,7 @@ header {
 }
 
 .navbar {
+    background-color: aliceblue;
     list-style-type: none;
     display: flex;
     gap: 20px;
@@ -34,6 +36,7 @@ header {
 
 .navbar a {
     text-decoration: none;
+    background-color: aliceblue;
     color: #3498DB;
     font-size: 1.1rem;
 }
